// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Do not inadvertently publish design tokens, change their description, or make them themeable - classic 1`] = `
Array [
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-red-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-red-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-red-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-red-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-red-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-red-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-red-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-red-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-red-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-red-1200",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-orange-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-orange-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-orange-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-orange-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-orange-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-orange-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-orange-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-orange-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-orange-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-orange-1200",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-yellow-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-yellow-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-yellow-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-yellow-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-yellow-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-yellow-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-yellow-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-yellow-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-yellow-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-yellow-1200",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-green-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-green-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-green-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-green-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-green-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-green-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-green-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-green-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-green-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-green-1200",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-teal-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-teal-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-teal-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-teal-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-teal-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-teal-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-teal-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-teal-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-teal-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-teal-1200",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-blue-1-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-blue-1-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-blue-1-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-blue-1-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-blue-1-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-blue-1-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-blue-1-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-blue-1-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-blue-1-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-blue-1-1200",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-blue-2-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-blue-2-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-blue-2-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-blue-2-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-blue-2-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-blue-2-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-blue-2-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-blue-2-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-blue-2-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-blue-2-1200",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-purple-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-purple-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-purple-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-purple-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-purple-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-purple-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-purple-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-purple-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-purple-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-purple-1200",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-pink-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-pink-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-pink-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-pink-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-pink-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-pink-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-pink-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-pink-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-pink-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-pink-1200",
    "themeable": false,
  },
  Object {
    "description": "Color to represent a critical error or a critically high-level of severity. For example: \\"Sev-1\\"",
    "name": "color-charts-status-critical",
    "themeable": true,
  },
  Object {
    "description": "Color to represent an error status or a high-level of severity. Use this color to represent a default error status when there is only one applicable to a chart. For example: \\"Failed\\" or \\"Sev-2\\"",
    "name": "color-charts-status-high",
    "themeable": true,
  },
  Object {
    "description": "Color to represent a medium-level of severity. For example: \\"Sev-3\\"",
    "name": "color-charts-status-medium",
    "themeable": true,
  },
  Object {
    "description": "Color to represent a warning or a low-level of severity. For example: \\"Warning\\" or \\"Sev-4\\"",
    "name": "color-charts-status-low",
    "themeable": true,
  },
  Object {
    "description": "Color to represent a positive status. *For example: \\"Success\\" or \\"Running\\"",
    "name": "color-charts-status-positive",
    "themeable": true,
  },
  Object {
    "description": "Color to represent an informational status. For example: \\"In-progress\\" or \\"Updating\\"",
    "name": "color-charts-status-info",
    "themeable": true,
  },
  Object {
    "description": "Color to represent a neutral status, a severity level of no impact, or the lowest-level of severity. For example: \\"Pending\\" or \\"Sev-5\\"",
    "name": "color-charts-status-neutral",
    "themeable": true,
  },
  Object {
    "description": "The color to represent a threshold with a negative outcome. For example: A maximum limit",
    "name": "color-charts-threshold-negative",
    "themeable": true,
  },
  Object {
    "description": "The color to represent a threshold with a positive outcome. For example: A designated pass rate",
    "name": "color-charts-threshold-positive",
    "themeable": true,
  },
  Object {
    "description": "The color to represent an informational threshold to highlight special circumstances that may have or will occur. For example: A forecasted estimate",
    "name": "color-charts-threshold-info",
    "themeable": true,
  },
  Object {
    "description": "The color to represent a threshold with a neutral outcome. For example: An average or baseline",
    "name": "color-charts-threshold-neutral",
    "themeable": true,
  },
  Object {
    "description": "Color #1 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-1",
    "themeable": true,
  },
  Object {
    "description": "Color #2 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-2",
    "themeable": true,
  },
  Object {
    "description": "Color #3 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-3",
    "themeable": true,
  },
  Object {
    "description": "Color #4 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-4",
    "themeable": true,
  },
  Object {
    "description": "Color #5 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-5",
    "themeable": true,
  },
  Object {
    "description": "Color #6 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-6",
    "themeable": true,
  },
  Object {
    "description": "Color #7 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-7",
    "themeable": true,
  },
  Object {
    "description": "Color #8 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-8",
    "themeable": true,
  },
  Object {
    "description": "Color #9 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-9",
    "themeable": true,
  },
  Object {
    "description": "Color #10 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-10",
    "themeable": true,
  },
  Object {
    "description": "Color #11 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-11",
    "themeable": true,
  },
  Object {
    "description": "Color #12 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-12",
    "themeable": true,
  },
  Object {
    "description": "Color #13 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-13",
    "themeable": true,
  },
  Object {
    "description": "Color #14 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-14",
    "themeable": true,
  },
  Object {
    "description": "Color #15 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-15",
    "themeable": true,
  },
  Object {
    "description": "Color #16 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-16",
    "themeable": true,
  },
  Object {
    "description": "Color #17 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-17",
    "themeable": true,
  },
  Object {
    "description": "Color #18 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-18",
    "themeable": true,
  },
  Object {
    "description": "Color #19 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-19",
    "themeable": true,
  },
  Object {
    "description": "Color #20 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-20",
    "themeable": true,
  },
  Object {
    "description": "Color #21 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-21",
    "themeable": true,
  },
  Object {
    "description": "Color #22 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-22",
    "themeable": true,
  },
  Object {
    "description": "Color #23 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-23",
    "themeable": true,
  },
  Object {
    "description": "Color #24 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-24",
    "themeable": true,
  },
  Object {
    "description": "Color #25 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-25",
    "themeable": true,
  },
  Object {
    "description": "Color #26 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-26",
    "themeable": true,
  },
  Object {
    "description": "Color #27 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-27",
    "themeable": true,
  },
  Object {
    "description": "Color #28 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-28",
    "themeable": true,
  },
  Object {
    "description": "Color #29 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-29",
    "themeable": true,
  },
  Object {
    "description": "Color #30 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-30",
    "themeable": true,
  },
  Object {
    "description": "Color #31 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-31",
    "themeable": true,
  },
  Object {
    "description": "Color #32 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-32",
    "themeable": true,
  },
  Object {
    "description": "Color #33 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-33",
    "themeable": true,
  },
  Object {
    "description": "Color #34 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-34",
    "themeable": true,
  },
  Object {
    "description": "Color #35 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-35",
    "themeable": true,
  },
  Object {
    "description": "Color #36 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-36",
    "themeable": true,
  },
  Object {
    "description": "Color #37 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-37",
    "themeable": true,
  },
  Object {
    "description": "Color #38 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-38",
    "themeable": true,
  },
  Object {
    "description": "Color #39 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-39",
    "themeable": true,
  },
  Object {
    "description": "Color #40 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-40",
    "themeable": true,
  },
  Object {
    "description": "Color #41 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-41",
    "themeable": true,
  },
  Object {
    "description": "Color #42 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-42",
    "themeable": true,
  },
  Object {
    "description": "Color #43 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-43",
    "themeable": true,
  },
  Object {
    "description": "Color #44 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-44",
    "themeable": true,
  },
  Object {
    "description": "Color #45 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-45",
    "themeable": true,
  },
  Object {
    "description": "Color #46 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-46",
    "themeable": true,
  },
  Object {
    "description": "Color #47 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-47",
    "themeable": true,
  },
  Object {
    "description": "Color #48 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-48",
    "themeable": true,
  },
  Object {
    "description": "Color #49 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-49",
    "themeable": true,
  },
  Object {
    "description": "Color #50 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-50",
    "themeable": true,
  },
  Object {
    "description": "The background color of primary buttons in active state.",
    "name": "color-background-button-primary-active",
    "themeable": true,
  },
  Object {
    "description": "The default background color of primary buttons.",
    "name": "color-background-button-primary-default",
    "themeable": true,
  },
  Object {
    "description": "The background color of primary buttons in disabled state.",
    "name": "color-background-button-primary-disabled",
    "themeable": true,
  },
  Object {
    "description": "The background color of primary buttons in hover state.",
    "name": "color-background-button-primary-hover",
    "themeable": true,
  },
  Object {
    "description": "The background color of container main content areas. For example: content areas of form sections, containers, tables, and cards.",
    "name": "color-background-container-content",
    "themeable": true,
  },
  Object {
    "description": "The background color of container headers. For example: headers of form sections, containers, tables, and card collections.",
    "name": "color-background-container-header",
    "themeable": true,
  },
  Object {
    "description": "The background color of a checked form control. For example: background fill of a selected radio button, checked checkbox, and toggle that is switched on.",
    "name": "color-background-control-checked",
    "themeable": true,
  },
  Object {
    "description": "The default background color of form controls. For example: radio buttons and checkboxes default background fill color.",
    "name": "color-background-control-default",
    "themeable": true,
  },
  Object {
    "description": "The background color of a disabled form control. For example: background fill of a disabled radio button and checkbox.",
    "name": "color-background-control-disabled",
    "themeable": true,
  },
  Object {
    "description": "The default background color of dropdown items. For example: select, multiselect, autosuggest, and datepicker dropdown backgrounds.",
    "name": "color-background-dropdown-item-default",
    "themeable": true,
  },
  Object {
    "description": "The background color of text that matches a user's query. For example: the background of text matching a query entered into a table filter, select, multiselect, or autosuggest.",
    "name": "color-background-dropdown-item-filter-match",
    "themeable": true,
  },
  Object {
    "description": "The background color of dropdown items on hover. For example: background of hovered items in select, multiselect, autosuggest, and datepicker dropdowns.",
    "name": "color-background-dropdown-item-hover",
    "themeable": true,
  },
  Object {
    "description": "The background color of the home header, displayed on the Service's home page.",
    "name": "color-background-home-header",
    "themeable": true,
  },
  Object {
    "description": "The default background color of form inputs. For example: background fill of an input, textarea, autosuggest, and trigger of a select and multiselect.",
    "name": "color-background-input-default",
    "themeable": true,
  },
  Object {
    "description": "The background color of a disabled form input. For example: background fill of a disabled input, textarea, autosuggest, and trigger of a select and multiselect.",
    "name": "color-background-input-disabled",
    "themeable": true,
  },
  Object {
    "description": "The background color of a selected item. For example: tokens, selected table rows, cards, and tile backgrounds.",
    "name": "color-background-item-selected",
    "themeable": true,
  },
  Object {
    "description": "The background color of the main content area on a page. For example:  content area in app layout.",
    "name": "color-background-layout-main",
    "themeable": true,
  },
  Object {
    "description": "Background color for blue notifications. For example: blue badges and info flash messages.",
    "name": "color-background-notification-blue",
    "themeable": true,
  },
  Object {
    "description": "Background color for green notifications. For example: green badges and success flash messages.",
    "name": "color-background-notification-green",
    "themeable": true,
  },
  Object {
    "description": "Background color for red notifications. For example: red badges and error flash messages.",
    "name": "color-background-notification-red",
    "themeable": true,
  },
  Object {
    "description": "The background color of an item in error state. For example: error alerts.",
    "name": "color-background-status-error",
    "themeable": true,
  },
  Object {
    "description": "The background color of an informational item. For example: information alerts.",
    "name": "color-background-status-info",
    "themeable": true,
  },
  Object {
    "description": "The background color of an item in success state. For example: success alerts.",
    "name": "color-background-status-success",
    "themeable": true,
  },
  Object {
    "description": "The background color of an item in warning state. For example: warning alerts.",
    "name": "color-background-status-warning",
    "themeable": true,
  },
  Object {
    "description": "The background color of checked toggles in disabled state.",
    "name": "color-background-toggle-checked-disabled",
    "themeable": true,
  },
  Object {
    "description": "The border color of normal buttons.",
    "name": "color-border-button-normal-default",
    "themeable": true,
  },
  Object {
    "description": "The border color of normal buttons in disabled state.",
    "name": "color-border-button-normal-disabled",
    "themeable": true,
  },
  Object {
    "description": "The border color of normal buttons in hover state.",
    "name": "color-border-button-normal-hover",
    "themeable": true,
  },
  Object {
    "description": "The border color of primary buttons in disabled state.",
    "name": "color-border-button-primary-disabled",
    "themeable": true,
  },
  Object {
    "description": "The top border color for containers and first item in dropdowns. For example: the top border of a card, dropdown, and table.",
    "name": "color-border-container-top",
    "themeable": true,
  },
  Object {
    "description": "The default border color of form controls. For example: radio buttons and checkboxes.",
    "name": "color-border-control-default",
    "themeable": true,
  },
  Object {
    "description": "The default color for dividers. For example: dividers in column layout, expanding sections, side nav, help panel, between table rows and dropdown items, and inside containers.",
    "name": "color-border-divider-default",
    "themeable": true,
  },
  Object {
    "description": "The border color of dropdown items on hover. For example: border of hovered items in select, multiselect, autosuggest, and hovered days in datepicker.",
    "name": "color-border-dropdown-item-hover",
    "themeable": true,
  },
  Object {
    "description": "The default border color of form inputs. For example: input, textarea, autosuggest, datepicker, select, and multiselect.",
    "name": "color-border-input-default",
    "themeable": true,
  },
  Object {
    "description": "The color of focus states. For example: the focus ring around interactive elements.",
    "name": "color-border-item-focused",
    "themeable": true,
  },
  Object {
    "description": "The border color of a selected item. For example: tokens, selected table rows, selected cards, and selected tile borders.",
    "name": "color-border-item-selected",
    "themeable": true,
  },
  Object {
    "description": "The border color of an item in error state. For example: error alerts.",
    "name": "color-border-status-error",
    "themeable": true,
  },
  Object {
    "description": "The border color of an informational item. For example: information alerts.",
    "name": "color-border-status-info",
    "themeable": true,
  },
  Object {
    "description": "The border color of an item in success state. For example: success alerts.",
    "name": "color-border-status-success",
    "themeable": true,
  },
  Object {
    "description": "The border color of an item in warning state. For example: warning alerts.",
    "name": "color-border-status-warning",
    "themeable": true,
  },
  Object {
    "description": "The color used to mark enabled form controls. For example: the checkmark on checkboxes, inner circle on radio buttons, and handle on toggles.",
    "name": "color-foreground-control-default",
    "themeable": true,
  },
  Object {
    "description": "The color used to mark disabled form controls. For example: the checkmark on checkboxes, inner circle on radio buttons, and handle on toggles.",
    "name": "color-foreground-control-disabled",
    "themeable": true,
  },
  Object {
    "description": "The accent color used to guide a user. *For example: the highlighted page in the side navigation and active tab text.*",
    "name": "color-text-accent",
    "themeable": true,
  },
  Object {
    "description": "The default color of non-heading text and body content. For example: text in a paragraph tag, table cell data, form field labels and values.",
    "name": "color-text-body-default",
    "themeable": true,
  },
  Object {
    "description": "The color of text that is secondary to base text. For example: text in the navigation and tools panels.",
    "name": "color-text-body-secondary",
    "themeable": true,
  },
  Object {
    "description": "The active text color of normal buttons. For example: Active text color in normal and link buttons.",
    "name": "color-text-button-normal-active",
    "themeable": true,
  },
  Object {
    "description": "The default text color of normal buttons. For example: Default text color in normal and link buttons.",
    "name": "color-text-button-normal-default",
    "themeable": true,
  },
  Object {
    "description": "The hover text color of normal buttons. For example: Hover text color in normal and link buttons.",
    "name": "color-text-button-normal-hover",
    "themeable": true,
  },
  Object {
    "description": "The active text color of primary buttons.",
    "name": "color-text-button-primary-active",
    "themeable": true,
  },
  Object {
    "description": "The default text color of primary buttons.",
    "name": "color-text-button-primary-default",
    "themeable": true,
  },
  Object {
    "description": "The hover text color of primary buttons.",
    "name": "color-text-button-primary-hover",
    "themeable": true,
  },
  Object {
    "description": "The default color for counters. For example: counters in table headers",
    "name": "color-text-counter",
    "themeable": true,
  },
  Object {
    "description": "The color of text matching a user's query. For example: the text matching a query entered into a table filter, select, multiselect, or autosuggest.",
    "name": "color-text-dropdown-item-filter-match",
    "themeable": true,
  },
  Object {
    "description": "The text color of hovered or selected dropdown items. *For example: selected day text color in date picker, label text color of the item on hover in a select, multiselect, and autosuggest.*",
    "name": "color-text-dropdown-item-highlighted",
    "themeable": true,
  },
  Object {
    "description": "The color of text in non-dropdown empty states. For example: tables, card collections, and attribute editor empty state text.",
    "name": "color-text-empty",
    "themeable": true,
  },
  Object {
    "description": "The default color of form field labels and values. For example: the label in form fields, checkboxes, radio buttons, toggles, and the value in inputs and text areas.",
    "name": "color-text-form-default",
    "themeable": true,
  },
  Object {
    "description": "The color of secondary text in form fields and controls. For example: the description and constraint text in form fields, the descriptions in checkboxes, radio buttons, toggles, and any additional info in an attribute editor.",
    "name": "color-text-form-secondary",
    "themeable": true,
  },
  Object {
    "description": "The default color for group labels. For example: group label in dropdown part of button dropdown, select, and multiselect, and group label in table and cards' preferences content selector.",
    "name": "color-text-group-label",
    "themeable": false,
  },
  Object {
    "description": "The default color for headings 1-5. For example: headings in tables, card collections, containers, form sections, forms, and app layout panels.",
    "name": "color-text-heading-default",
    "themeable": true,
  },
  Object {
    "description": "The default color for secondary heading text such as page and container descriptions. For example: descriptions in containers such as form sections, tables, and card collections, as well as form page descriptions.",
    "name": "color-text-heading-secondary",
    "themeable": true,
  },
  Object {
    "description": "The color of the home header's text, displayed on the Service's home page.",
    "name": "color-text-home-header-default",
    "themeable": true,
  },
  Object {
    "description": "The color of the home header's secondary text, displayed on the Service's home page.",
    "name": "color-text-home-header-secondary",
    "themeable": true,
  },
  Object {
    "description": "The color of the text value in a disabled input. For example: text in a disabled input, autosuggest, datepicker, and the trigger of a select and multiselect.",
    "name": "color-text-input-disabled",
    "themeable": true,
  },
  Object {
    "description": "The color of placeholder text in an input. For example: placeholder text in an input, autosuggest, datepicker, and the trigger of a select and multiselect.",
    "name": "color-text-input-placeholder",
    "themeable": true,
  },
  Object {
    "description": "The color of clickable elements in their default state. *For example: expandable sections, tabs, and icons.*",
    "name": "color-text-interactive-default",
    "themeable": true,
  },
  Object {
    "description": "The color of clickable elements in their disabled state. For example: disabled tabs, button text, and icons.",
    "name": "color-text-interactive-disabled",
    "themeable": true,
  },
  Object {
    "description": "The color of clickable elements on hover. *For example: expandable sections, and icons on hover.*",
    "name": "color-text-interactive-hover",
    "themeable": true,
  },
  Object {
    "description": "The default color of clickable elements in the flashbar. For example: The dismiss icon button in a flashbar.",
    "name": "color-text-interactive-inverted-default",
    "themeable": true,
  },
  Object {
    "description": "The hover color of clickable elements in the flashbar. For example: The dismiss icon button in a flashbar.",
    "name": "color-text-interactive-inverted-hover",
    "themeable": true,
  },
  Object {
    "description": "This is the default color for non-form labels. For example: the key in key/value pairs and card's sections labels.",
    "name": "color-text-label",
    "themeable": true,
  },
  Object {
    "description": "The default color for links. For example: text in an anchor tag, info links, breadcrumb links, and icon links.",
    "name": "color-text-link-default",
    "themeable": true,
  },
  Object {
    "description": "The hover color for links. For example: text in an anchor tag, info links, breadcrumb links, and icon links.",
    "name": "color-text-link-hover",
    "themeable": false,
  },
  Object {
    "description": "Default text color for notifications. For example: the text on badges and flashes.",
    "name": "color-text-notification-default",
    "themeable": true,
  },
  Object {
    "description": "The color of error text and icons. For example: form field error text and error status indicators.",
    "name": "color-text-status-error",
    "themeable": true,
  },
  Object {
    "description": "The color of inactive and loading text and icons. For example: table and card collection loading states icon and text and inactive and pending status indicators.",
    "name": "color-text-status-inactive",
    "themeable": true,
  },
  Object {
    "description": "The color of info text and icons. For example: info status indicators and info alert icon.",
    "name": "color-text-status-info",
    "themeable": true,
  },
  Object {
    "description": "The color of success text and icons. For example: success status indicators and success alert icon.",
    "name": "color-text-status-success",
    "themeable": true,
  },
  Object {
    "description": "The color of warning icons.",
    "name": "color-text-status-warning",
    "themeable": true,
  },
  Object {
    "description": "The default font family that will be applied globally to the product interface. ",
    "name": "font-family-base",
    "themeable": true,
  },
  Object {
    "description": "The monospace font family that will be applied globally to the product interface.",
    "name": "font-family-monospace",
    "themeable": true,
  },
  Object {
    "description": "The easing curve for providing responsive yet smooth visual feedback.",
    "name": "motion-easing-responsive",
    "themeable": false,
  },
  Object {
    "description": "The easing curve for making an element sticky to a certain state.",
    "name": "motion-easing-sticky",
    "themeable": false,
  },
  Object {
    "description": "The easing curve for drawing a user's attention in an expressive way.",
    "name": "motion-easing-expressive",
    "themeable": false,
  },
  Object {
    "description": "The duration for making the motion feel quick and responsive.",
    "name": "motion-duration-responsive",
    "themeable": false,
  },
  Object {
    "description": "The duration for accommodating the motion with more expressiveness.",
    "name": "motion-duration-expressive",
    "themeable": false,
  },
  Object {
    "description": "The duration for drawing more attention or accommodating for more complexity.",
    "name": "motion-duration-complex",
    "themeable": false,
  },
  Object {
    "description": "The CSS keyframes for showing an element.",
    "name": "motion-keyframes-fade-in",
    "themeable": false,
  },
  Object {
    "description": "The CSS keyframes for hiding an element.",
    "name": "motion-keyframes-fade-out",
    "themeable": false,
  },
  Object {
    "description": "The CSS keyframes applied to an error status icon to draw the user's attention.",
    "name": "motion-keyframes-status-icon-error",
    "themeable": false,
  },
  Object {
    "description": "The CSS keyframes for scaling up an element to draw the user's attention.",
    "name": "motion-keyframes-scale-popup",
    "themeable": false,
  },
  Object {
    "description": "The horizontal padding inside a container.",
    "name": "space-container-horizontal",
    "themeable": false,
  },
  Object {
    "description": "The horizontal padding inside field components.",
    "name": "space-field-horizontal",
    "themeable": false,
  },
  Object {
    "description": "The XXXS spacing unit which scales between modes. For example: vertical space between key label and value in key/value pairs.",
    "name": "space-scaled-xxxs",
    "themeable": false,
  },
  Object {
    "description": "The XXS spacing unit which scales between modes. For example: vertical space between form field label and control.",
    "name": "space-scaled-xxs",
    "themeable": false,
  },
  Object {
    "description": "The XS spacing unit which scales between modes. For example: horizontal space between buttons in an action stripe.",
    "name": "space-scaled-xs",
    "themeable": false,
  },
  Object {
    "description": "The S spacing unit which scales between modes. For example: vertical padding inside a popover.",
    "name": "space-scaled-s",
    "themeable": false,
  },
  Object {
    "description": "The M spacing unit which scales between modes. For example: top padding of content inside a container",
    "name": "space-scaled-m",
    "themeable": false,
  },
  Object {
    "description": "The L spacing unit which scales between modes. For example: vertical space between form fields.",
    "name": "space-scaled-l",
    "themeable": false,
  },
  Object {
    "description": "The XL spacing unit which scales between modes. For example: vertical space between tasks in a tutorial panel.",
    "name": "space-scaled-xl",
    "themeable": false,
  },
  Object {
    "description": "The XXL spacing unit which scales between modes. For example: horizontal padding for side navigation and help panel content.",
    "name": "space-scaled-xxl",
    "themeable": false,
  },
  Object {
    "description": "The XXXL spacing unit which scales between modes. For example: horizontal padding for app layout and split panel content on large screens.",
    "name": "space-scaled-xxxl",
    "themeable": false,
  },
  Object {
    "description": "The static XXXS spacing unit.",
    "name": "space-static-xxxs",
    "themeable": false,
  },
  Object {
    "description": "The static XXS spacing unit.",
    "name": "space-static-xxs",
    "themeable": false,
  },
  Object {
    "description": "The static XS spacing unit.",
    "name": "space-static-xs",
    "themeable": false,
  },
  Object {
    "description": "The static S spacing unit.",
    "name": "space-static-s",
    "themeable": false,
  },
  Object {
    "description": "The static M spacing unit.",
    "name": "space-static-m",
    "themeable": false,
  },
  Object {
    "description": "The static L spacing unit.",
    "name": "space-static-l",
    "themeable": false,
  },
  Object {
    "description": "The static XL spacing unit.",
    "name": "space-static-xl",
    "themeable": false,
  },
  Object {
    "description": "The static XXL spacing unit.",
    "name": "space-static-xxl",
    "themeable": false,
  },
  Object {
    "description": "The static XXXL spacing unit.",
    "name": "space-static-xxxl",
    "themeable": false,
  },
]
`;

exports[`Do not inadvertently publish design tokens, change their description, or make them themeable - visual-refresh 1`] = `
Array [
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-red-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-red-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-red-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-red-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-red-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-red-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-red-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-red-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-red-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'red' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-red-1200",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-orange-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-orange-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-orange-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-orange-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-orange-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-orange-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-orange-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-orange-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-orange-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'orange' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-orange-1200",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-yellow-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-yellow-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-yellow-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-yellow-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-yellow-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-yellow-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-yellow-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-yellow-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-yellow-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'yellow' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-yellow-1200",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-green-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-green-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-green-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-green-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-green-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-green-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-green-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-green-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-green-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'green' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-green-1200",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-teal-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-teal-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-teal-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-teal-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-teal-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-teal-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-teal-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-teal-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-teal-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'teal' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-teal-1200",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-blue-1-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-blue-1-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-blue-1-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-blue-1-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-blue-1-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-blue-1-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-blue-1-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-blue-1-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-blue-1-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-1' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-blue-1-1200",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-blue-2-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-blue-2-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-blue-2-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-blue-2-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-blue-2-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-blue-2-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-blue-2-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-blue-2-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-blue-2-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'blue-2' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-blue-2-1200",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-purple-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-purple-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-purple-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-purple-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-purple-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-purple-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-purple-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-purple-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-purple-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'purple' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-purple-1200",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 3:1",
    "name": "color-charts-pink-300",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 4:1",
    "name": "color-charts-pink-400",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 5:1",
    "name": "color-charts-pink-500",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 6:1",
    "name": "color-charts-pink-600",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 7:1",
    "name": "color-charts-pink-700",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 8:1",
    "name": "color-charts-pink-800",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 9:1",
    "name": "color-charts-pink-900",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 10:1",
    "name": "color-charts-pink-1000",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 11:1",
    "name": "color-charts-pink-1100",
    "themeable": false,
  },
  Object {
    "description": "Color from the 'pink' data visualization palette at a contrast ratio of 12:1",
    "name": "color-charts-pink-1200",
    "themeable": false,
  },
  Object {
    "description": "Color to represent a critical error or a critically high-level of severity. For example: \\"Sev-1\\"",
    "name": "color-charts-status-critical",
    "themeable": true,
  },
  Object {
    "description": "Color to represent an error status or a high-level of severity. Use this color to represent a default error status when there is only one applicable to a chart. For example: \\"Failed\\" or \\"Sev-2\\"",
    "name": "color-charts-status-high",
    "themeable": true,
  },
  Object {
    "description": "Color to represent a medium-level of severity. For example: \\"Sev-3\\"",
    "name": "color-charts-status-medium",
    "themeable": true,
  },
  Object {
    "description": "Color to represent a warning or a low-level of severity. For example: \\"Warning\\" or \\"Sev-4\\"",
    "name": "color-charts-status-low",
    "themeable": true,
  },
  Object {
    "description": "Color to represent a positive status. *For example: \\"Success\\" or \\"Running\\"",
    "name": "color-charts-status-positive",
    "themeable": true,
  },
  Object {
    "description": "Color to represent an informational status. For example: \\"In-progress\\" or \\"Updating\\"",
    "name": "color-charts-status-info",
    "themeable": true,
  },
  Object {
    "description": "Color to represent a neutral status, a severity level of no impact, or the lowest-level of severity. For example: \\"Pending\\" or \\"Sev-5\\"",
    "name": "color-charts-status-neutral",
    "themeable": true,
  },
  Object {
    "description": "The color to represent a threshold with a negative outcome. For example: A maximum limit",
    "name": "color-charts-threshold-negative",
    "themeable": true,
  },
  Object {
    "description": "The color to represent a threshold with a positive outcome. For example: A designated pass rate",
    "name": "color-charts-threshold-positive",
    "themeable": true,
  },
  Object {
    "description": "The color to represent an informational threshold to highlight special circumstances that may have or will occur. For example: A forecasted estimate",
    "name": "color-charts-threshold-info",
    "themeable": true,
  },
  Object {
    "description": "The color to represent a threshold with a neutral outcome. For example: An average or baseline",
    "name": "color-charts-threshold-neutral",
    "themeable": true,
  },
  Object {
    "description": "Color #1 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-1",
    "themeable": true,
  },
  Object {
    "description": "Color #2 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-2",
    "themeable": true,
  },
  Object {
    "description": "Color #3 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-3",
    "themeable": true,
  },
  Object {
    "description": "Color #4 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-4",
    "themeable": true,
  },
  Object {
    "description": "Color #5 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-5",
    "themeable": true,
  },
  Object {
    "description": "Color #6 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-6",
    "themeable": true,
  },
  Object {
    "description": "Color #7 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-7",
    "themeable": true,
  },
  Object {
    "description": "Color #8 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-8",
    "themeable": true,
  },
  Object {
    "description": "Color #9 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-9",
    "themeable": true,
  },
  Object {
    "description": "Color #10 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-10",
    "themeable": true,
  },
  Object {
    "description": "Color #11 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-11",
    "themeable": true,
  },
  Object {
    "description": "Color #12 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-12",
    "themeable": true,
  },
  Object {
    "description": "Color #13 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-13",
    "themeable": true,
  },
  Object {
    "description": "Color #14 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-14",
    "themeable": true,
  },
  Object {
    "description": "Color #15 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-15",
    "themeable": true,
  },
  Object {
    "description": "Color #16 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-16",
    "themeable": true,
  },
  Object {
    "description": "Color #17 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-17",
    "themeable": true,
  },
  Object {
    "description": "Color #18 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-18",
    "themeable": true,
  },
  Object {
    "description": "Color #19 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-19",
    "themeable": true,
  },
  Object {
    "description": "Color #20 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-20",
    "themeable": true,
  },
  Object {
    "description": "Color #21 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-21",
    "themeable": true,
  },
  Object {
    "description": "Color #22 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-22",
    "themeable": true,
  },
  Object {
    "description": "Color #23 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-23",
    "themeable": true,
  },
  Object {
    "description": "Color #24 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-24",
    "themeable": true,
  },
  Object {
    "description": "Color #25 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-25",
    "themeable": true,
  },
  Object {
    "description": "Color #26 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-26",
    "themeable": true,
  },
  Object {
    "description": "Color #27 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-27",
    "themeable": true,
  },
  Object {
    "description": "Color #28 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-28",
    "themeable": true,
  },
  Object {
    "description": "Color #29 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-29",
    "themeable": true,
  },
  Object {
    "description": "Color #30 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-30",
    "themeable": true,
  },
  Object {
    "description": "Color #31 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-31",
    "themeable": true,
  },
  Object {
    "description": "Color #32 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-32",
    "themeable": true,
  },
  Object {
    "description": "Color #33 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-33",
    "themeable": true,
  },
  Object {
    "description": "Color #34 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-34",
    "themeable": true,
  },
  Object {
    "description": "Color #35 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-35",
    "themeable": true,
  },
  Object {
    "description": "Color #36 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-36",
    "themeable": true,
  },
  Object {
    "description": "Color #37 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-37",
    "themeable": true,
  },
  Object {
    "description": "Color #38 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-38",
    "themeable": true,
  },
  Object {
    "description": "Color #39 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-39",
    "themeable": true,
  },
  Object {
    "description": "Color #40 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-40",
    "themeable": true,
  },
  Object {
    "description": "Color #41 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-41",
    "themeable": true,
  },
  Object {
    "description": "Color #42 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-42",
    "themeable": true,
  },
  Object {
    "description": "Color #43 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-43",
    "themeable": true,
  },
  Object {
    "description": "Color #44 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-44",
    "themeable": true,
  },
  Object {
    "description": "Color #45 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-45",
    "themeable": true,
  },
  Object {
    "description": "Color #46 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-46",
    "themeable": true,
  },
  Object {
    "description": "Color #47 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-47",
    "themeable": true,
  },
  Object {
    "description": "Color #48 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-48",
    "themeable": true,
  },
  Object {
    "description": "Color #49 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-49",
    "themeable": true,
  },
  Object {
    "description": "Color #50 on the categorical data visualization palette.",
    "name": "color-charts-palette-categorical-50",
    "themeable": true,
  },
  Object {
    "description": "The background color of primary buttons in active state.",
    "name": "color-background-button-primary-active",
    "themeable": true,
  },
  Object {
    "description": "The default background color of primary buttons.",
    "name": "color-background-button-primary-default",
    "themeable": true,
  },
  Object {
    "description": "The background color of primary buttons in disabled state.",
    "name": "color-background-button-primary-disabled",
    "themeable": true,
  },
  Object {
    "description": "The background color of primary buttons in hover state.",
    "name": "color-background-button-primary-hover",
    "themeable": true,
  },
  Object {
    "description": "The background color of container main content areas. For example: content areas of form sections, containers, tables, and cards.",
    "name": "color-background-container-content",
    "themeable": true,
  },
  Object {
    "description": "The background color of container headers. For example: headers of form sections, containers, tables, and card collections.",
    "name": "color-background-container-header",
    "themeable": true,
  },
  Object {
    "description": "The background color of a checked form control. For example: background fill of a selected radio button, checked checkbox, and toggle that is switched on.",
    "name": "color-background-control-checked",
    "themeable": true,
  },
  Object {
    "description": "The default background color of form controls. For example: radio buttons and checkboxes default background fill color.",
    "name": "color-background-control-default",
    "themeable": true,
  },
  Object {
    "description": "The background color of a disabled form control. For example: background fill of a disabled radio button and checkbox.",
    "name": "color-background-control-disabled",
    "themeable": true,
  },
  Object {
    "description": "The default background color of dropdown items. For example: select, multiselect, autosuggest, and datepicker dropdown backgrounds.",
    "name": "color-background-dropdown-item-default",
    "themeable": true,
  },
  Object {
    "description": "The background color of text that matches a user's query. For example: the background of text matching a query entered into a table filter, select, multiselect, or autosuggest.",
    "name": "color-background-dropdown-item-filter-match",
    "themeable": true,
  },
  Object {
    "description": "The background color of dropdown items on hover. For example: background of hovered items in select, multiselect, autosuggest, and datepicker dropdowns.",
    "name": "color-background-dropdown-item-hover",
    "themeable": true,
  },
  Object {
    "description": "The background color of the home header, displayed on the Service's home page.",
    "name": "color-background-home-header",
    "themeable": true,
  },
  Object {
    "description": "The default background color of form inputs. For example: background fill of an input, textarea, autosuggest, and trigger of a select and multiselect.",
    "name": "color-background-input-default",
    "themeable": true,
  },
  Object {
    "description": "The background color of a disabled form input. For example: background fill of a disabled input, textarea, autosuggest, and trigger of a select and multiselect.",
    "name": "color-background-input-disabled",
    "themeable": true,
  },
  Object {
    "description": "The background color of a selected item. For example: tokens, selected table rows, cards, and tile backgrounds.",
    "name": "color-background-item-selected",
    "themeable": true,
  },
  Object {
    "description": "The background color of the main content area on a page. For example:  content area in app layout.",
    "name": "color-background-layout-main",
    "themeable": true,
  },
  Object {
    "description": "Background color for blue notifications. For example: blue badges and info flash messages.",
    "name": "color-background-notification-blue",
    "themeable": true,
  },
  Object {
    "description": "Background color for green notifications. For example: green badges and success flash messages.",
    "name": "color-background-notification-green",
    "themeable": true,
  },
  Object {
    "description": "Background color for red notifications. For example: red badges and error flash messages.",
    "name": "color-background-notification-red",
    "themeable": true,
  },
  Object {
    "description": "The background color of an item in error state. For example: error alerts.",
    "name": "color-background-status-error",
    "themeable": true,
  },
  Object {
    "description": "The background color of an informational item. For example: information alerts.",
    "name": "color-background-status-info",
    "themeable": true,
  },
  Object {
    "description": "The background color of an item in success state. For example: success alerts.",
    "name": "color-background-status-success",
    "themeable": true,
  },
  Object {
    "description": "The background color of an item in warning state. For example: warning alerts.",
    "name": "color-background-status-warning",
    "themeable": true,
  },
  Object {
    "description": "The background color of checked toggles in disabled state.",
    "name": "color-background-toggle-checked-disabled",
    "themeable": true,
  },
  Object {
    "description": "The border color of normal buttons.",
    "name": "color-border-button-normal-default",
    "themeable": true,
  },
  Object {
    "description": "The border color of normal buttons in disabled state.",
    "name": "color-border-button-normal-disabled",
    "themeable": true,
  },
  Object {
    "description": "The border color of normal buttons in hover state.",
    "name": "color-border-button-normal-hover",
    "themeable": true,
  },
  Object {
    "description": "The border color of primary buttons in disabled state.",
    "name": "color-border-button-primary-disabled",
    "themeable": true,
  },
  Object {
    "description": "The top border color for containers and first item in dropdowns. For example: the top border of a card, dropdown, and table.",
    "name": "color-border-container-top",
    "themeable": true,
  },
  Object {
    "description": "The default border color of form controls. For example: radio buttons and checkboxes.",
    "name": "color-border-control-default",
    "themeable": true,
  },
  Object {
    "description": "The default color for dividers. For example: dividers in column layout, expanding sections, side nav, help panel, between table rows and dropdown items, and inside containers.",
    "name": "color-border-divider-default",
    "themeable": true,
  },
  Object {
    "description": "The border color of dropdown items on hover. For example: border of hovered items in select, multiselect, autosuggest, and hovered days in datepicker.",
    "name": "color-border-dropdown-item-hover",
    "themeable": true,
  },
  Object {
    "description": "The default border color of form inputs. For example: input, textarea, autosuggest, datepicker, select, and multiselect.",
    "name": "color-border-input-default",
    "themeable": true,
  },
  Object {
    "description": "The color of focus states. For example: the focus ring around interactive elements.",
    "name": "color-border-item-focused",
    "themeable": true,
  },
  Object {
    "description": "The border color of a selected item. For example: tokens, selected table rows, selected cards, and selected tile borders.",
    "name": "color-border-item-selected",
    "themeable": true,
  },
  Object {
    "description": "The border color of an item in error state. For example: error alerts.",
    "name": "color-border-status-error",
    "themeable": true,
  },
  Object {
    "description": "The border color of an informational item. For example: information alerts.",
    "name": "color-border-status-info",
    "themeable": true,
  },
  Object {
    "description": "The border color of an item in success state. For example: success alerts.",
    "name": "color-border-status-success",
    "themeable": true,
  },
  Object {
    "description": "The border color of an item in warning state. For example: warning alerts.",
    "name": "color-border-status-warning",
    "themeable": true,
  },
  Object {
    "description": "The color used to mark enabled form controls. For example: the checkmark on checkboxes, inner circle on radio buttons, and handle on toggles.",
    "name": "color-foreground-control-default",
    "themeable": true,
  },
  Object {
    "description": "The color used to mark disabled form controls. For example: the checkmark on checkboxes, inner circle on radio buttons, and handle on toggles.",
    "name": "color-foreground-control-disabled",
    "themeable": true,
  },
  Object {
    "description": "The accent text color used to guide a user. For example: the highlighted page in the side navigation, active tab text, selected day text color in date picker, and hover state in expandable section.",
    "name": "color-text-accent",
    "themeable": true,
  },
  Object {
    "description": "The default color of non-heading text and body content. For example: text in a paragraph tag, table cell data, form field labels and values.",
    "name": "color-text-body-default",
    "themeable": true,
  },
  Object {
    "description": "The color of text that is secondary to base text. For example: text in the navigation and tools panels.",
    "name": "color-text-body-secondary",
    "themeable": true,
  },
  Object {
    "description": "The active text color of normal buttons. For example: Active text color in normal and link buttons.",
    "name": "color-text-button-normal-active",
    "themeable": true,
  },
  Object {
    "description": "The default text color of normal buttons. For example: Default text color in normal and link buttons.",
    "name": "color-text-button-normal-default",
    "themeable": true,
  },
  Object {
    "description": "The hover text color of normal buttons. For example: Hover text color in normal and link buttons.",
    "name": "color-text-button-normal-hover",
    "themeable": true,
  },
  Object {
    "description": "The active text color of primary buttons.",
    "name": "color-text-button-primary-active",
    "themeable": true,
  },
  Object {
    "description": "The default text color of primary buttons.",
    "name": "color-text-button-primary-default",
    "themeable": true,
  },
  Object {
    "description": "The hover text color of primary buttons.",
    "name": "color-text-button-primary-hover",
    "themeable": true,
  },
  Object {
    "description": "The default color for counters. For example: counters in table headers",
    "name": "color-text-counter",
    "themeable": true,
  },
  Object {
    "description": "The color of text matching a user's query. For example: the text matching a query entered into a table filter, select, multiselect, or autosuggest.",
    "name": "color-text-dropdown-item-filter-match",
    "themeable": true,
  },
  Object {
    "description": "The text color of hovered or selected dropdown items. For example: label text color of the item on hover in a select, multiselect, and autosuggest.",
    "name": "color-text-dropdown-item-highlighted",
    "themeable": true,
  },
  Object {
    "description": "The color of text in non-dropdown empty states. For example: tables, card collections, and attribute editor empty state text.",
    "name": "color-text-empty",
    "themeable": true,
  },
  Object {
    "description": "The default color of form field labels and values. For example: the label in form fields, checkboxes, radio buttons, toggles, and the value in inputs and text areas.",
    "name": "color-text-form-default",
    "themeable": true,
  },
  Object {
    "description": "The color of secondary text in form fields and controls. For example: the description and constraint text in form fields, the descriptions in checkboxes, radio buttons, toggles, and any additional info in an attribute editor.",
    "name": "color-text-form-secondary",
    "themeable": true,
  },
  Object {
    "description": "The default color for group labels. For example: group label in dropdown part of button dropdown, select, and multiselect, and group label in table and cards' preferences content selector.",
    "name": "color-text-group-label",
    "themeable": false,
  },
  Object {
    "description": "The default color for headings 1-5. For example: headings in tables, card collections, containers, form sections, forms, and app layout panels.",
    "name": "color-text-heading-default",
    "themeable": true,
  },
  Object {
    "description": "The default color for secondary heading text such as page and container descriptions. For example: descriptions in containers such as form sections, tables, and card collections, as well as form page descriptions.",
    "name": "color-text-heading-secondary",
    "themeable": true,
  },
  Object {
    "description": "The color of the home header's text, displayed on the Service's home page.",
    "name": "color-text-home-header-default",
    "themeable": true,
  },
  Object {
    "description": "The color of the home header's secondary text, displayed on the Service's home page.",
    "name": "color-text-home-header-secondary",
    "themeable": true,
  },
  Object {
    "description": "The color of the text value in a disabled input. For example: text in a disabled input, autosuggest, datepicker, and the trigger of a select and multiselect.",
    "name": "color-text-input-disabled",
    "themeable": true,
  },
  Object {
    "description": "The color of placeholder text in an input. For example: placeholder text in an input, autosuggest, datepicker, and the trigger of a select and multiselect.",
    "name": "color-text-input-placeholder",
    "themeable": true,
  },
  Object {
    "description": "The color of clickable elements in their default state. For example: tabs, and icons.",
    "name": "color-text-interactive-default",
    "themeable": true,
  },
  Object {
    "description": "The color of clickable elements in their disabled state. For example: disabled tabs, button text, and icons.",
    "name": "color-text-interactive-disabled",
    "themeable": true,
  },
  Object {
    "description": "The color of clickable elements on hover. For example: icons on hover.",
    "name": "color-text-interactive-hover",
    "themeable": true,
  },
  Object {
    "description": "The default color of clickable elements in the flashbar. For example: The dismiss icon button in a flashbar.",
    "name": "color-text-interactive-inverted-default",
    "themeable": true,
  },
  Object {
    "description": "The hover color of clickable elements in the flashbar. For example: The dismiss icon button in a flashbar.",
    "name": "color-text-interactive-inverted-hover",
    "themeable": true,
  },
  Object {
    "description": "This is the default color for non-form labels. For example: the key in key/value pairs and card's sections labels.",
    "name": "color-text-label",
    "themeable": true,
  },
  Object {
    "description": "The default color for links. For example: text in an anchor tag, info links, breadcrumb links, and icon links.",
    "name": "color-text-link-default",
    "themeable": true,
  },
  Object {
    "description": "The hover color for links. For example: text in an anchor tag, info links, breadcrumb links, and icon links.",
    "name": "color-text-link-hover",
    "themeable": false,
  },
  Object {
    "description": "Default text color for notifications. For example: the text on badges and flashes.",
    "name": "color-text-notification-default",
    "themeable": true,
  },
  Object {
    "description": "The color of error text and icons. For example: form field error text and error status indicators.",
    "name": "color-text-status-error",
    "themeable": true,
  },
  Object {
    "description": "The color of inactive and loading text and icons. For example: table and card collection loading states icon and text and inactive and pending status indicators.",
    "name": "color-text-status-inactive",
    "themeable": true,
  },
  Object {
    "description": "The color of info text and icons. For example: info status indicators and info alert icon.",
    "name": "color-text-status-info",
    "themeable": true,
  },
  Object {
    "description": "The color of success text and icons. For example: success status indicators and success alert icon.",
    "name": "color-text-status-success",
    "themeable": true,
  },
  Object {
    "description": "The color of warning icons.",
    "name": "color-text-status-warning",
    "themeable": true,
  },
  Object {
    "description": "The default font family that will be applied globally to the product interface. ",
    "name": "font-family-base",
    "themeable": true,
  },
  Object {
    "description": "The monospace font family that will be applied globally to the product interface.",
    "name": "font-family-monospace",
    "themeable": true,
  },
  Object {
    "description": "The easing curve for providing responsive yet smooth visual feedback.",
    "name": "motion-easing-responsive",
    "themeable": false,
  },
  Object {
    "description": "The easing curve for making an element sticky to a certain state.",
    "name": "motion-easing-sticky",
    "themeable": false,
  },
  Object {
    "description": "The easing curve for drawing a user's attention in an expressive way.",
    "name": "motion-easing-expressive",
    "themeable": false,
  },
  Object {
    "description": "The duration for making the motion feel quick and responsive.",
    "name": "motion-duration-responsive",
    "themeable": false,
  },
  Object {
    "description": "The duration for accommodating the motion with more expressiveness.",
    "name": "motion-duration-expressive",
    "themeable": false,
  },
  Object {
    "description": "The duration for drawing more attention or accommodating for more complexity.",
    "name": "motion-duration-complex",
    "themeable": false,
  },
  Object {
    "description": "The CSS keyframes for showing an element.",
    "name": "motion-keyframes-fade-in",
    "themeable": false,
  },
  Object {
    "description": "The CSS keyframes for hiding an element.",
    "name": "motion-keyframes-fade-out",
    "themeable": false,
  },
  Object {
    "description": "The CSS keyframes applied to an error status icon to draw the user's attention.",
    "name": "motion-keyframes-status-icon-error",
    "themeable": false,
  },
  Object {
    "description": "The CSS keyframes for scaling up an element to draw the user's attention.",
    "name": "motion-keyframes-scale-popup",
    "themeable": false,
  },
  Object {
    "description": "The horizontal padding inside a container.",
    "name": "space-container-horizontal",
    "themeable": false,
  },
  Object {
    "description": "The horizontal padding inside field components.",
    "name": "space-field-horizontal",
    "themeable": false,
  },
  Object {
    "description": "The XXXS spacing unit which scales between modes. For example: vertical space between key label and value in key/value pairs.",
    "name": "space-scaled-xxxs",
    "themeable": false,
  },
  Object {
    "description": "The XXS spacing unit which scales between modes. For example: vertical space between form field label and control.",
    "name": "space-scaled-xxs",
    "themeable": false,
  },
  Object {
    "description": "The XS spacing unit which scales between modes. For example: horizontal space between buttons in an action stripe.",
    "name": "space-scaled-xs",
    "themeable": false,
  },
  Object {
    "description": "The S spacing unit which scales between modes. For example: vertical padding inside a popover.",
    "name": "space-scaled-s",
    "themeable": false,
  },
  Object {
    "description": "The M spacing unit which scales between modes. For example: horizontal padding inside a popover.",
    "name": "space-scaled-m",
    "themeable": false,
  },
  Object {
    "description": "The L spacing unit which scales between modes. For example: vertical space between form fields.",
    "name": "space-scaled-l",
    "themeable": false,
  },
  Object {
    "description": "The XL spacing unit which scales between modes. For example: vertical space between tasks in a tutorial panel.",
    "name": "space-scaled-xl",
    "themeable": false,
  },
  Object {
    "description": "The XXL spacing unit which scales between modes. For example: left indentation of grouped options in a select.",
    "name": "space-scaled-xxl",
    "themeable": false,
  },
  Object {
    "description": "The XXXL spacing unit which scales between modes. For example: horizontal padding for app layout and split panel content on large screens.",
    "name": "space-scaled-xxxl",
    "themeable": false,
  },
  Object {
    "description": "The static XXXS spacing unit.",
    "name": "space-static-xxxs",
    "themeable": false,
  },
  Object {
    "description": "The static XXS spacing unit.",
    "name": "space-static-xxs",
    "themeable": false,
  },
  Object {
    "description": "The static XS spacing unit.",
    "name": "space-static-xs",
    "themeable": false,
  },
  Object {
    "description": "The static S spacing unit.",
    "name": "space-static-s",
    "themeable": false,
  },
  Object {
    "description": "The static M spacing unit.",
    "name": "space-static-m",
    "themeable": false,
  },
  Object {
    "description": "The static L spacing unit.",
    "name": "space-static-l",
    "themeable": false,
  },
  Object {
    "description": "The static XL spacing unit.",
    "name": "space-static-xl",
    "themeable": false,
  },
  Object {
    "description": "The static XXL spacing unit.",
    "name": "space-static-xxl",
    "themeable": false,
  },
  Object {
    "description": "The static XXXL spacing unit.",
    "name": "space-static-xxxl",
    "themeable": false,
  },
]
`;
